package DB;

message TableField {
  enum Type {
    UNKNOWN_TYPE,
    INT,
    LONGINT,
    DOUBLE,
    CHAR,
    STRING,
    BOOL,
    CHARARRAY,
  }

  optional string name = 1;
  optional int32 index = 2;
  optional Type type = 3;
  optional int32 size = 4;  // Only meaningful for CharArray - length limit.
}

message Index {
  repeated int32 index_fields = 1;
}

message TableInfo {
  optional string name = 1;
  repeated TableField fields = 2;

  optional Index primary_index = 3;
  repeated Index indexes = 4;

  // TODO: foreign keys, constraints, assertions ...
}

message DatabaseCatalog {
  optional string name = 1;
  repeated TableInfo tables = 2;
}
